index ve output.css güncellendi

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1 class="text-white font-gotham text-[8vw] leading-[7.8vw] font-bold not-italic pb-[8vw]">
           OYUNA
           <br />
-          HAZIR MISIN?
+          HAZIR&nbsp;&nbsp;MISIN?
         </h1>
         <p class="text-white font-gotham text-[1rem] font-medium not-italic leading-normal">
           Rakip takımı mat etmek için tek bir hamlen var.
@@ -38,7 +38,7 @@
 
     <section class="relative w-full h-screen">
       <!-- Carousel -->
-      <div class="w-1/2 h-screen absolute right-0 top-0 bg-black flex items-center justify-center absolute">
+      <div class="w-1/2 h-screen right-0 top-0 bg-black flex items-center justify-center absolute">
         <div class="swiper mySwiper w-3/4 h-3/4">
           <div class="swiper-wrapper">
             <div class="swiper-slide flex items-center justify-center"><img src="./img/beyaz-sah.png" alt="Beyaz Sah" class="w-24 h-24" /></div>
